<resources>
    <string name="app_name">Train Schedule SRT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Station name</string>
    <string name="navigation_main">Main</string>
    <string name="navigation_history">History</string>
    <string name="navigation_setting">Setting</string>

    <string name="btn_main_see_schedule">See Schedule</string>
    <string name="btn_main_start_station">Start Station</string>
    <string name="btn_main_end_station">End Station</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="image_view_delete">delete</string>

    <string name="main_tv_start_station">Start</string>
    <string name="main_tv_end_station">End</string>
    <string name="main_tv_detail_default">Select Start station and End station \nthen see schedule</string>
    <string name="main_tv_bookmark">Press bookmark button to set \nthat schedule as a default</string>
    <string name="main_no_schedule">Not found !!! between the origin and destination station with your choice.</string>

    <string name="offline_tv_start_station">Start</string>
    <string name="offline_tv_end_station">End</string>

    <string name="item_schedule_number">Number:</string>
    <string name="item_schedule_type">Type:</string>
    <string name="item_schedule_start">Start:</string>
    <string name="item_schedule_end">End:</string>
    <string name="item_station_name">Name:</string>
    <string name="item_station_line">Line:</string>
    <string name="nav_header_logo_desc">Logo</string>

    <string name="web_railway_main">http://www.railway.co.th</string>
    <string name="web_railway_check_time">http://www.railway.co.th/checktime/checktime.asp?lenguage=Eng</string>
    <string name="history_tv_no_item">No history</string>
</resources>
